--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body,
 html {
   margin: 0;
   font-family: "PT Mono", monospace, sans-serif;
-  /* font-size: 62.5%; */
+   font-size: 62.5%; 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -40,4 +40,8 @@ a {
 
 ul {
   list-style: none;
+}
+
+.App {
+  height: 100%;
 }
