--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,9 @@
   /* App wide light shadow. */
   --light-shadow: 0px 3px 15px rgba(0, 0, 0, 0.4);
   --border-radius: 8px;
+
+  /* Code editor related colors. */
+  --monakai-bg: #272822;
 }
 
 html,
