--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,9 @@
   --danger-dark: #b71c1d;
   --warning: #ffba00;
 
-  /* App wide light shadow. */
+  /* General variables */
   --light-shadow: 0px 3px 15px rgba(0, 0, 0, 0.4);
+  /* --light-shadow: 0px 1px 5px rgba(0, 0, 0, 0.4); */
   --border-radius: 8px;
 
   /* Code editor related colors. */
