--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
 
   /* General variables */
   --light-shadow: 0px 3px 15px rgba(0, 0, 0, 0.4);
-  /* --light-shadow: 0px 1px 5px rgba(0, 0, 0, 0.4); */
+  --inset-light-shadow: inset 0px 3px 5px rgba(0, 0, 0, 0.2);
   --border-radius: 8px;
 
   /* Code editor related colors. */
@@ -51,7 +51,7 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-  transition: color 0.4s;
+  transition: color 0.2s;
   cursor: pointer;
 }
 
