COD-6: feat(web-compiler): implemented web complier

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   /* 50 shades of grey */
   --background-grey: #f5f7fa;
   --placeholder-grey: #8f8ea1;
-  --custom-greyy: #ececec;
+  --custom-grey: #ececec;
   --custom-black: #403865;
 
   /* Notifications / messages colors. */
