--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@
 
   /* General variables */
   --light-shadow: 0px 3px 15px rgba(0, 0, 0, 0.4);
+  --lighter-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
   --inset-light-shadow: inset 0px 3px 5px rgba(0, 0, 0, 0.2);
   --border-radius: 8px;
 
